# fun-ocaml-workshop

./: .gitignore  LICENSE  Makefile  README.md  dune-project  funocaml_actor.opam  funocaml_actor_eio.opam  funocaml_actor_eio.opam.template  funocaml_actor_picos_io_cohttp.opam  funocaml_actor_shared.opam  funocaml_protocol.opam  funocaml_server.opam  ray_tracer.opam  watch
actor/: actor.mli
front/: dune
lib/actor/: dune
lib/actor_eio/: actor_eio.ml  actor_eio.mli  dune
lib/actor_picos_io_cohttp/: actor_picos_io_cohttp.ml  actor_picos_io_cohttp.mli  dune
lib/actor_shared/: actor_shared.ml  dune  example.ml
lib/protocol/: dune  protocol.ml
lib/tracer/: camera.ml  camera.mli  color.ml  color.mli  dune  material.ml  material.mli  pos.ml  pos.mli  ray.ml  ray.mli  ray_tracer.ml  scene.ml  scene.mli  utils.ml  utils.mli  vect.ml  vect.mli
protocol/: protocol.ml
server/: server.ml  style.css
test/: dune  test.ml  test_eio.ml  test_eio_queue.ml  test_picos_io_cohttp.ml
